fix(styling): fix svg rendering on mobile

--- a/src/graphs/mermaid-graph.css
+++ b/src/graphs/mermaid-graph.css
@@ -1,11 +1,10 @@
 div {
   font-family: serif, 'Courier New', Courier, monospace;
   font-weight: bold;
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 
 span {
   font-family: serif, 'Courier New', Courier, monospace;
   font-style: italic;
-  font-size: 1.1rem;
 }
